--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@clerk/express": "1.7.60",
+    "@types/multer": "^2.0.0",
     "cors": "2.8.5",
     "dotenv": "17.2.3",
     "drizzle-orm": "0.44.7",
     "express": "5.2.1",
+    "multer": "^2.0.2",
     "pg": "^8.16.3"
   },
   "keywords": [],
