--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/cors": "2.8.19",
     "@types/express": "5.0.6",
+    "@types/json2csv": "^5.0.7",
     "@types/pg": "8.15.6",
     "drizzle-kit": "0.31.7",
     "nodemon": "3.1.11",
