--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
-    "json2csv": "6.0.0-alpha.2",
+    "@json2csv/plainjs": "^6.0.0",
     "lucide-react": "^0.453.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
