--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "drizzle-orm": "0.44.7",
     "express": "5.2.1",
     "multer": "^2.0.2",
+    "@json2csv/plainjs": "^6.0.0",
     "pg": "^8.16.3"
   },
   "keywords": [],
@@ -25,7 +26,6 @@
   "devDependencies": {
     "@types/cors": "2.8.19",
     "@types/express": "5.0.6",
-    "@types/json2csv": "^5.0.7",
     "@types/pg": "8.15.6",
     "drizzle-kit": "0.31.7",
     "nodemon": "3.1.11",
