--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/poppins": "^5.2.7",
     "@fontsource/vazirmatn": "^5.2.8",
     "@hookform/resolvers": "^5.2.2",
+    "@json2csv/node": "^6.1.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -57,11 +58,11 @@
     "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.1.5",
     "framer-motion": "^12.23.22",
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
-    "@json2csv/node": "^6.1.3",
     "lucide-react": "^0.453.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
@@ -83,7 +84,7 @@
   },
   "devDependencies": {
     "@builder.io/vite-plugin-jsx-loc": "^0.1.1",
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.3",
     "@types/dompurify": "^3.2.0",
     "@types/express": "4.17.21",
