--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "pnpm install --frozen-lockfile --prod=false && pnpm --dir server install --frozen-lockfile --prod=false && vite build && esbuild server/src/index.ts --platform=node --bundle --format=cjs --outdir=dist --out-extension:.js=.cjs",
-    "start": "NODE_ENV=production node dist/index.cjs",
+    "start": "node dist/index.cjs",
     "db:push": "pnpm --dir server db:push",
     "preview": "vite preview --host",
     "check": "tsc --noEmit",
