--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "pnpm install --frozen-lockfile --prod=false && pnpm --dir server install --frozen-lockfile --prod=false && vite build && esbuild server/src/index.ts --platform=node --bundle --format=cjs --outdir=dist --out-extension:.js=.cjs",
-    "start": "node server/dist/index.js",
+    "start": "cross-env NODE_ENV=production node dist/index.cjs",
     "db:push": "pnpm --dir server db:push",
     "preview": "vite preview --host",
     "check": "tsc --noEmit",
@@ -80,7 +80,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "@builder.io/vite-plugin-jsx-loc": "^0.1.1",
