--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
+    "compression": "^1.7.4",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.1",
