--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.6.0",
@@ -67,7 +69,6 @@
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
-    "compression": "^1.7.4",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.1",
@@ -81,13 +82,13 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
-    "zod": "^4.1.12",
-    "cross-env": "^7.0.3"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@builder.io/vite-plugin-jsx-loc": "^0.1.1",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/compression": "^1.8.1",
     "@types/dompurify": "^3.2.0",
     "@types/express": "4.17.21",
     "@types/google.maps": "^3.58.1",
