--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@clerk/express": "1.7.60",
+    "@json2csv/plainjs": "^6.0.0",
     "@types/multer": "^2.0.0",
+    "compression": "^1.8.1",
     "cors": "2.8.5",
     "dotenv": "17.2.3",
     "drizzle-orm": "0.44.7",
-    "express": "5.2.1",
+    "express": "4.21.2",
     "multer": "^2.0.2",
-    "@json2csv/plainjs": "^6.0.0",
     "pg": "^8.16.3"
   },
   "keywords": [],
@@ -25,7 +26,7 @@
   "description": "",
   "devDependencies": {
     "@types/cors": "2.8.19",
-    "@types/express": "5.0.6",
+    "@types/express": "4.17.21",
     "@types/pg": "8.15.6",
     "drizzle-kit": "0.31.7",
     "nodemon": "3.1.11",
