--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
@@ -18,20 +21,21 @@
     "dotenv": "17.2.3",
     "drizzle-orm": "0.44.7",
     "express": "4.21.2",
+    "express-async-errors": "^3.1.1",
     "multer": "^2.0.2",
     "openid-client": "^6.1.7",
     "pg": "^8.16.3",
-    "uuid": "^11.0.3"
+    "uuid": "^9.0.1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "2.8.19",
     "@types/express": "4.17.21",
     "@types/pg": "8.15.6",
-    "@types/cookie-parser": "^1.4.7",
     "drizzle-kit": "0.31.7",
     "nodemon": "3.1.11",
     "ts-node": "10.9.2",
