--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "multer": "^2.0.2",
     "openid-client": "^6.1.7",
     "pg": "^8.16.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^4.1.12"
   },
   "keywords": [],
   "author": "",
